--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,3 +1,25 @@
+// PRIMARY SASS FILE
+
+
+// Modules and Variables
+/* reserved for Sass code that doesn't cause Sass to actually output CSS. Things like mixin declarations, functions, and variables. */
+
+// Partials
+/* where the meat of my CSS is constructed. */
+// @import "partials/typography";
+
+@import "partials/reset";
+
+// Third-party
+// @import "vendor/jquery.ui.core";
+
+
+
+
+
+
+//
+
 .test-header {
   color: lime;
   size: 18px;
