--- a/SASS/partials/_base.scss
+++ b/SASS/partials/_base.scss
@@ -1,22 +1,23 @@
 /*  imports for all mixins + global project variables */
 
-// Font weights
-$light: 100;
-$regular: 400;
-$bold: 600;
+/////////////////////////////////////////////////
+//                                             //
+//                    BASE                     //
+//                                             //
+//        Site-wide mixins and functions       //
+//                                             //
+/////////////////////////////////////////////////
 
-// Base Font
-$base-font-family: sans-serif;
-$base-font-weight: $regular;
-$base-font-size: 13px;
-$base-line-height: 1.4;
 
-// Fixed Font
-$fixed-font-family: monospace;
-$fixed-font-size: 85%;
-$fixed-line-height: $base-line-height;
 
-// Headings
-$header-font-weight: $bold;
 
-@import "../modules/all";
+
+
+
+
+
+
+
+@import "../modules/all"; // For some reason importing this at the end stope the rest file overriding
+
+
